--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  http: ^1.3.0
-  geolocator: ^13.0.2
-  lottie: ^3.3.1
-  geocoding: ^3.0.0
+  http: ^0.13.6
+  flutter_typeahead: ^5.2.0
+  lottie: ^3.0.0
+  geolocator: ^9.0.2
+  intl: ^0.20.2
+  google_fonts: ^4.0.4
 
 dev_dependencies:
   flutter_test:
@@ -63,9 +65,12 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - Assets/
-  #   - images/a_dot_ham.jpeg
-
+    - assets/animations/sun.json
+    - assets/animations/cloud.json
+    - assets/animations/rain.json
+    - assets/animations/storm.json
+    - assets/animations/snow.json
+    - assets/animations/fog.json
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
